manifest/istio_demo/bookinfo_virtual_service_average.yaml
# https://cloud.tencent.com/document/product/1261/62954
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
  namespace: appmeshload
spec: # 缺省 gateway 参数，表示该路由配置应用于 mesh 内部 sidecar 的流量
  hosts:
  - front # 匹配访问该 host 的流量
  http:
  - route:
    - destination: # 配置目的端及权重
        host: front.appmeshload.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color
  namespace: appmeshload
spec:
  hosts:
  - color
  http:
  - route:
    - destination:
        host: color
        subset: v1
        port:
          number: 8090
      weight: 40
    - destination:
        host: color
        subset: v2
        port:
          number: 8090
      weight: 30
    - destination:
        host: color
        subset: v3
        port:
          number: 8090
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruit
  namespace: appmeshload
spec:
  hosts:
  - fruit
  http:
  - route:
    - destination:
        host: fruit
        subset: v1
        port:
          number: 8090
      weight: 50
    - destination:
        host: fruit
        subset: v2
        port:
          number: 8090
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: animal
  namespace: appmeshload
spec:
  hosts:
  - animal
  http:
  - route:
    - destination:
        host: animal
        subset: v1
        port:
          number: 8090
      weight: 50
    - destination:
        host: animal
        subset: v2
        port:
          number: 8090
      weight: 50
